@@ -27,7 +27,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.util.Objects.nonNull;
@@ -91,7 +90,7 @@ public class HearingScheduledEventCallbackHandler extends CallbackHandler {
         return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
                         .append(" - ").append(location.getCourtAddress())
                         .append(" - ").append(location.getPostcode()).toString())
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private CallbackResponse checkFutureDate(CallbackParams callbackParams) {
